Use parent snapshot in drools-apps
Fixed checkstyle issues that were subsequently reported.
Also fixed a few eclipse warnings.
Also fixed some of the sonar issues in the files that were touched:
- use "{}" in logger calls
- camelcase method names
- use "<?>" instead of generics
- add serialization ID

Issue-ID: POLICY-2188
Change-Id: I5c94a2e26dd74a61a0a919e1c3da17ab02a5bc9d
Signed-off-by: Jim Hahn <jrh3@att.com>